# car-rentar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/config/: logging_config.py  settings.py
src/domain/entities/: booking.py  car.py
src/domain/ports/: booking_repository.py  car_repository.py
src/domain/services/: booking_service.py  car_service.py
src/infrastructure/adapters/: json_booking_repository.py  json_car_repository.py
src/infrastructure/api/: dependencies.py
src/infrastructure/api/v1/: bookings.py  cars.py  schemas.py
tests/: conftest.py
tests/integration/: test_bookings_api.py  test_cars_availability_api.py
tests/unit/: test_booking_service.py
